force-app/main/default/objects/RH_eConsent__e/RH_eConsent__e.object-meta.xml
<CustomObject>
    <label>RH eConsent</label>
    <pluralLabel>RH eConsent</pluralLabel>
</CustomObject>