force-app/main/default/objects/RH_eConsent__e/fields/Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Time__c</fullName>
    <label>Event Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>