force-app/main/default/objects/RH_eConsent__e/fields/External_System_Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Subject_Id__c</fullName>
    <label>External System Subject Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>