force-app/main/default/objects/RH_eConsent__e/fields/Protocol_Id__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Id__c</fullName>
    <label>Protocol Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>