force-app/main/default/objects/RH_eConsent__e/fields/Protocol_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Site_Id__c</fullName>
    <label>Protocol Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>