force-app/main/default/objects/RH_eConsent__e/fields/Sponsor_Id__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Id__c</fullName>
    <label>Sponsor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>