force-app/main/default/objects/RH_eConsent__e/fields/Subject_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Subject_Consent_Date__c</fullName>
    <label>Subject Consent Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>