force-app/main/default/objects/RH_eConsent__e/fields/Subject_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Subject_Consent_Status__c</fullName>
    <label>Subject Consent Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>