force-app/main/default/objects/RH_eConsent__e/fields/Subject_Consenting_Id__c.field-meta.xml
<CustomField>
    <fullName>Subject_Consenting_Id__c</fullName>
    <label>Subject Consenting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>