force-app/main/default/objects/RH_eConsent__e/fields/System_Document_Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Document_Collection_Id__c</fullName>
    <label>System Document Collection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>