force-app/main/default/objects/RH_eConsent__e/fields/System_Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Subject_Id__c</fullName>
    <label>System Subject Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>